Fri Feb 15 04:09:28 GMT 2013  Olly Betts <olly@survex.com>

	* api/queryinternal.cc: Need <functional> for mem_fun().

Fri Feb 15 03:56:32 GMT 2013  Olly Betts <olly@survex.com>

	* tests/harness/testsuite.cc: Don't provide explicit template types to
	  make_pair - it isn't useful, and breaks with C++11.  Fixes build
	  error with MSVC2012.

Thu Jan 31 23:39:08 GMT 2013  Olly Betts <olly@survex.com>

	* common/Tokeniseise.pm: Put the binary chop tables with the larger
	  ones last, so the offsets to the start of them are more likely to
	  fit into a byte.

Wed Jan 30 04:17:07 GMT 2013  Olly Betts <olly@survex.com>

	* common/Makefile.mk,common/Tokeniseise.pm,languages/Makefile.mk,
	  languages/collate-sbl: Factor out the generic code to create a
	  string-to-enum mapping table into a perl module so we can reuse
	  it elsewhere.

Mon Jan 28 01:44:53 GMT 2013  Olly Betts <olly@survex.com>

	* examples/quest.cc: Fix to build with Sun Studio 12 compiler.
	  (ticket#611)

Thu Jan 24 22:40:12 GMT 2013  Olly Betts <olly@survex.com>

	* common/Makefile.mk,common/keyword.cc,common/keyword.h: Commit new
	  keyword lookup function needed by previous commit.

Thu Jan 24 22:26:19 GMT 2013  Olly Betts <olly@survex.com>

	* languages/: Generate a compact and efficient table to convert
	  language names to enum codes, which we can then use a C switch
	  statement to dispatch.  The table first checks the token length,
	  and then does a binary chop on tokens of the same length.  This
	  is both faster and smaller than the approach we were using, with
	  the benefit that the table is auto-generated.

Wed Jan 23 00:51:42 GMT 2013  Olly Betts <olly@survex.com>

	* matcher/selectpostlist.cc,matcher/selectpostlist.h: Check document
	  matches weight threshold before checking positional information,
	  which speeds up slow phrase searches (tweaked version of
	  positional-query-weight-check-first.patch from #394).

Thu Jan 17 06:48:41 GMT 2013  Olly Betts <olly@survex.com>
